--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -18,7 +15,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "npx jest --watchAll",
     "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
@@ -40,14 +37,27 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@swc/core": "^1.3.26",
+    "@swc/jest": "^0.2.24",
+    "@testing-library/dom": "^8.19.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-text-mask": "^5.4.11",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "react-app-alias": "^2.2.2",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.56.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
