--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-xo-typescript": "^0.55.1",
     "eslint-plugin-react": "^7.32.0",
     "jsdom": "^21.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.56.2",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
