--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "immer": "^9.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
