--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "outDir": "./dist",
+    "declaration": true,
+    "declarationMap": true,
+    "rootDir": ".",
     "paths": {
       "@components/*": ["./src/components/*"],
       "@utils/*": ["./src/utils/*"],
@@ -29,6 +33,10 @@
   "include": [
     "src",
     "vite.config.ts"
+  ],
+  "exclude": [
+    "src/test",
+    "src/experimental"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
