--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "type": "git",
     "url": "git+https://github.com/Daniel8bits/onyx-ui.git"
   },
-  "author": "Daniel Noguês de Oliveira (Github Accounts: LonelehKitten, Daniel8bits)",
+  "author": "Daniel Noguês de Oliveira",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Daniel8bits/onyx-ui/issues"
