--- a/aquino-components/package.json
+++ b/aquino-components/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-text-mask": "^5.5.0",
+    "react-imask": "^6.4.3",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.5"
   },
