--- a/aquino-components/package.json
+++ b/aquino-components/package.json
@@ -11,11 +11,13 @@
     "test": "vitest"
   },
   "dependencies": {
+    "imask": "6.5.0-alpha.0",
     "immer": "^9.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-imask": "^6.4.3",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.5"
   },
@@ -29,6 +31,7 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-text-mask": "^5.4.11",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
