--- a/aquino-components/package.json
+++ b/aquino-components/package.json
@@ -8,7 +8,8 @@
     "build:react": "tsc && vite build",
     "build:styles": "sass src/style/main.scss dist/style.css --style compressed",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "cypress": "npx cypress open"
   },
   "dependencies": {
     "imask": "6.5.0-alpha.0",
@@ -35,6 +36,8 @@
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "cypress": "^12.12.0",
+    "cypress-real-events": "^1.8.1",
     "eslint": "^8.31.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.55.1",
