configuration + table migration

--- a/aquino-components/package.json
+++ b/aquino-components/package.json
@@ -14,42 +14,44 @@
   "dependencies": {
     "events": "^3.3.0",
     "imask": "6.5.0-alpha.0",
-    "immer": "^9.0.18",
+    "immer": "^9.0.21",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-imask": "^6.4.3",
+    "react-icons": "^4.9.0",
+    "react-imask": "^6.6.3",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.1.5"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.19.1",
+    "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.0",
-    "@types/node": "^16.18.8",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^16.18.36",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "@types/react-text-mask": "^5.4.11",
-    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__jest-dom": "^5.14.6",
     "@types/uniqid": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "cypress": "^12.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "cypress": "^12.14.0",
     "cypress-real-events": "^1.8.1",
-    "eslint": "^8.31.0",
+    "eslint": "^8.42.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.55.1",
-    "eslint-plugin-react": "^7.32.0",
-    "jsdom": "^21.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "jsdom": "^21.1.2",
     "resize-observer-polyfill": "^1.5.1",
-    "sass": "^1.56.2",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.0",
-    "vite-plugin-dts": "^2.1.0",
-    "vitest": "^0.27.1"
+    "sass": "^1.63.3",
+    "typescript": "^4.9.5",
+    "vite": "^4.3.9",
+    "vite-plugin-dts": "^2.3.0",
+    "vitest": "^0.27.3"
   },
   "main": "./dist/aquino.umd.cjs",
   "module": "./dist/aquino.js",
